# bestellbar-bot

./: .dockerignore  .env.example  Dockerfile  README.md  compose.yaml  pyproject.toml
src/bestellbar_bot/: __init__.py  __main__.py  cli.py  config.py  fetcher.py  monitor.py  output.py  parser.py  state.py
src/bestellbar_bot/notifiers/: base.py  pushover.py
tests/: test_cli.py  test_compose.py  test_config.py  test_fetcher.py  test_monitor.py  test_output.py  test_parser.py  test_pushover.py  test_state.py
tests/fixtures/: product_page.html
