[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "bestellbar-bot"
version = "0.1.0"
description = "Monitor Bestell.bar product updates and send push notifications."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "beautifulsoup4>=4.12",
  "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
  "mypy>=1.10",
  "pytest>=8.2",
  "ruff>=0.5",
  "types-beautifulsoup4>=4.12",
]

[project.scripts]
bestellbar-bot = "bestellbar_bot.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/bestellbar_bot"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "A", "C4", "SIM", "RUF"]

[tool.mypy]
python_version = "3.11"
strict = true
mypy_path = "src"
files = ["src/bestellbar_bot"]

[tool.pytest.ini_options]
testpaths = ["tests"]
